--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
   },
   "devDependencies": {
     "typescript": "^3.2.4",
-    "@capacitor/ios": "latest",
-    "@capacitor/android": "latest"
+    "@capacitor/ios": "latest"
   },
   "files": [
     "dist/",
     "ios/",
-    "android/",
     "CapacitorVoip.podspec"
   ],
   "keywords": [
@@ -34,9 +32,6 @@
   "capacitor": {
     "ios": {
       "src": "ios"
-    },
-    "android": {
-      "src": "android"
     }
   },
   "repository": {
